// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component should render with default videoPreviewIndex 1`] = `
<div>
  <div>
    <div
      class="preview"
    >
      <div
        class="screenshot"
      >
        <img
          alt="video preview"
          src="https://img.youtube.com/vi/8fDF546/0.jpg"
        />
        <i
          class="material-icons playIcon"
        >
          play_circle_filled_white
        </i>
        <div
          class="iconBackground"
        />
      </div>
      <div
        class="title"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Video component should render with passed videoPreviewIndex 1`] = `
<div>
  <div>
    <div
      class="preview"
    >
      <div
        class="screenshot"
      >
        <img
          alt="video preview"
          src="https://img.youtube.com/vi/8fDF546/2.jpg"
        />
        <i
          class="material-icons playIcon"
        >
          play_circle_filled_white
        </i>
        <div
          class="iconBackground"
        />
      </div>
      <div
        class="title"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;
